// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Peer Dashboard - Chart Detail should NOT show card body header when detailChartType$ is Company 1`] = `
<pf-chart-detail-component
  __ngContext__={[Function LRootView]}
  clearSearch={[Function BehaviorSubject]}
  clearSearch$={[Function Observable]}
  detailChartCategory="null"
  detailChartCategory$={[Function Store]}
  detailChartCategorySubscription={[Function Subscriber]}
  detailChartItems="null"
  detailChartItems$={[Function Store]}
  detailChartItemsSubscription={[Function Subscriber]}
  detailChartType={[Function String]}
  detailChartType$={[Function Observable]}
  detailChartTypeSubscription={[Function Subscriber]}
  filteredChartItems="null"
  loadingDetailChartItems$={[Function Store]}
  loadingDetailChartItemsError$={[Function Store]}
  store={[Function Store]}
>
  <div
    class="card h-100 ml-2"
  >
    <div
      class="chart-detail-header card-header d-flex"
    >
      <div
        class="align-self-center mr-auto flex-grow-1"
      >
         Participating Companies by Contribution 
      </div>
      <div
        class="close-btn"
      >
        <fa-icon />
      </div>
    </div>
    <div
      class="p-2"
    >
      <pf-input-debounce />
    </div>
    <div
      class="card-body"
    >
      <div
        class="no-detail-items"
      >
        No companies associated to Participating Companies by Contribution. 
      </div>
    </div>
  </div>
</pf-chart-detail-component>
`;

exports[`Peer Dashboard - Chart Detail should show a card header of 'Exchange Job Orgs' when the detailCharType$ is ExchangeJobOrgs 1`] = `
<pf-chart-detail-component
  __ngContext__={[Function LRootView]}
  clearSearch={[Function BehaviorSubject]}
  clearSearch$={[Function Observable]}
  detailChartCategory="null"
  detailChartCategory$={[Function Store]}
  detailChartCategorySubscription={[Function Subscriber]}
  detailChartItems="null"
  detailChartItems$={[Function Store]}
  detailChartItemsSubscription={[Function Subscriber]}
  detailChartType={[Function String]}
  detailChartType$={[Function Observable]}
  detailChartTypeSubscription={[Function Subscriber]}
  filteredChartItems="null"
  loadingDetailChartItems$={[Function Store]}
  loadingDetailChartItemsError$={[Function Store]}
  store={[Function Store]}
>
  <div
    class="card h-100 ml-2"
  >
    <div
      class="chart-detail-header card-header d-flex"
    >
      <div
        class="align-self-center mr-auto flex-grow-1"
      >
         Exchange Job Orgs by Contribution 
      </div>
      <div
        class="close-btn"
      >
        <fa-icon />
      </div>
    </div>
    <div
      class="p-2"
    >
      <h4
        class="mb-2 p-2"
      >
      </h4>
      <pf-input-debounce />
    </div>
    <div
      class="card-body"
    >
      <div
        class="no-detail-items"
      >
        No companies associated to . 
      </div>
    </div>
  </div>
</pf-chart-detail-component>
`;

exports[`Peer Dashboard - Chart Detail should show the chart detail component 1`] = `
<pf-chart-detail-component
  __ngContext__={[Function LRootView]}
  clearSearch={[Function BehaviorSubject]}
  clearSearch$={[Function Observable]}
  detailChartCategory="null"
  detailChartCategory$={[Function Store]}
  detailChartCategorySubscription={[Function Subscriber]}
  detailChartItems="null"
  detailChartItems$={[Function Store]}
  detailChartItemsSubscription={[Function Subscriber]}
  detailChartType="null"
  detailChartType$={[Function Store]}
  detailChartTypeSubscription={[Function Subscriber]}
  filteredChartItems="null"
  loadingDetailChartItems$={[Function Store]}
  loadingDetailChartItemsError$={[Function Store]}
  store={[Function Store]}
>
  <div
    class="card h-100 ml-2"
  >
    <div
      class="chart-detail-header card-header d-flex"
    >
      <div
        class="align-self-center mr-auto flex-grow-1"
      >
         Participating Companies by Contribution 
      </div>
      <div
        class="close-btn"
      >
        <fa-icon />
      </div>
    </div>
    <div
      class="p-2"
    >
      <h4
        class="mb-2 p-2"
      >
      </h4>
      <pf-input-debounce />
    </div>
    <div
      class="card-body"
    >
      <div
        class="no-detail-items"
      >
        No companies associated to . 
      </div>
    </div>
  </div>
</pf-chart-detail-component>
`;
